<resources>
    <string name="app_name">Skin Cancer Detector</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">ANALISIS SEKARANG!</string>
    <string name="result">Hasil Analisis</string>
    <string name="doctor_icon">doctor icon</string>
    <string name="titleWelcome">Skin Cancer Detector</string>
    <string name="deskripsiWelcome">Aplikasi deteksi kanker kulit untuk anda!\nCegah sekarang untuk hari esok yang tenang.\n\n\nCukup sekali klik, sleanjutnya biarkan kami yang bekerja!</string>
    <string name="deteksi_sekarang">Deteksi Sekarang!</string>
    <string name="dicoding_submition">Dicoding Submition</string>
    <string name="original_made">Original Made\nMuhammad Juzairi Safitli</string>
    <string name="skin_cancer_detector">Skin Cancer\nDetector</string>
    <string name="skin_cancer_detector_home">Skin Cancer Detector</string>
    <string name="app_logo">App Logo</string>
    <string name="image_classifier_failed">Proses image classifier gagal </string>
    <string name="empty_image_warning">"Tidak ada gambar yang ditemukan "</string>
    <string name="preview_image">Preview Image</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="scancancer">ScanCancer</string>
    <string name="des_home">Cek kondisi kulitmu!\nCari tahu masalah kulitmu dengan sekali klik!</string>
    <string name="judul_artikel">Judul Artikel</string>
    <string name="tanggal_publikasi">Tanggal Publikasi</string>
    <string name="author">Author</string>
    <string name="tv_title_history">Riwayat analisis kanker kulit anda akan disimpan di sini</string>
    <string name="cari_tahu_tentang_kanker">Cari Tahu Tentang Kanker</string>
    <string name="identifikasi_kenali_dan_cegah">Identifikasi, kenali, dan cegah!</string>
    <string name="pilih_gambar_yang_ingin_dieteksi">Pilih gambar yang ingin dieteksi</string>
    <string name="imageforanalyz">imageForAnalyz</string>
    <string name="deskripsi_analisis">Hasil dari deteksi tidak sepenuhnya akurat. Pastikan gambar terlihat jelas untuk menambah keakuratan identifikasi.</string>
    <string name="kembali">Kembali</string>
    <string name="simpan">Simpan</string>
    <string name="analyze_date">Analyze Date</string>
    <string name="analyze_result">Analyze Result</string>
</resources>